re PR rtl-optimization/51187 (miscompilation of genrecog.c at -O2 for --target=avr)

PR rtl-optimization/51187
	* reorg.c (relax_delay_slots): Do not consider a jump useless if there
	is a barrier between the jump and its target label.

From-SVN: r181514